modified:   BaseUnit.cpp 	modified:   BaseUnit.h 	modified:   CMakeLists.txt 	modified:   ConfigUnit.cpp 	modified:   ConfigUnit.h 	new file:   Grid.h 	new file:   Group.cpp 	new file:   Group.h 	new file:   GroupFactory.cpp 	new file:   GroupFactory.h 	new file:   ImageObject.cpp 	new file:   ImageObject.h
Finished units
Added Groups

--- a/core/object/CMakeLists.txt
+++ b/core/object/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(OBJECT_SRCS
 	BaseUnit.cpp
 	ConfigUnit.cpp
+	ImageObject.cpp
+	Group.cpp
+	GroupFactory.cpp
 	)
 
 add_library(GF_OBJECT ${OBJECT_SRCS})
