new file:   grid.cfg 	modified:   module.cfg
Added grid configuration

--- a/module/base/module.cfg
+++ b/module/base/module.cfg
@@ -8,4 +8,5 @@ module:
 	interface_definitions = "interface.cfg";
 	game_definitions = "game.cfg";
 	button_definitions = "buttons.cfg";
+	grid_definitions = "grid.cfg";
 	};
