modified:   ../todo-list 	modified:   CMakeLists.txt 	new file:   Color.cpp 	new file:   Color.h
New Utility Class: Color

--- a/utility/CMakeLists.txt
+++ b/utility/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(UTILITY_SRCS
 	Config.cpp Module.cpp
 	ModuleManager.cpp ConfigValidator.cpp
+	Color.cpp
 	)
 
 add_library(GF_UTILITY ${UTILITY_SRCS})
