modified:   config.cfg 	modified:   module.cfg 	new file:   types.cfg 	modified:   units.cfg
Changed to reflect the new type system

--- a/module/base/module.cfg
+++ b/module/base/module.cfg
@@ -5,6 +5,7 @@ module:
 	graphic_dir = "graphics";
 	unit_definitions = "units.cfg";
 	group_definitions = "groups.cfg";
+	type_definitions = "types.cfg";
 	interface_definitions = "interface.cfg";
 	game_definitions = "game.cfg";
 	button_definitions = "buttons.cfg";
