--- a/module/base/units.cfg
+++ b/module/base/units.cfg
@@ -3,10 +3,10 @@ unit:
 	knight:
 		{
 		sprite = "graphics/knight.png";
-		basecolor = {r = 243; g = 108; b = 79; a = 255;};
 
 		attributes:
 			{
+			type = "defense";
 			health = 50;
 			damage = 5;
 			defense = 1;
@@ -19,10 +19,10 @@ unit:
 	ninja:
 		{
 		sprite = "graphics/ninja.png";
-		basecolor = {r = 255; g = 248; b = 153; a = 255;};
 
 		attributes:
 			{
+			type = "attack";
 			health = 25;
 			damage = 10;
 			range = 2;
@@ -34,10 +34,10 @@ unit:
 	archer:
 		{
 		sprite = "graphics/archer.png";
-		basecolor = {r = 0; g = 169; b = 157; a = 255;};	
 
 		attributes:
 			{
+			type = "ranged";
 			health = 25;	
 			damage = 10;
 			range = 4;
@@ -49,10 +49,10 @@ unit:
 	dark-wizard:
 		{
 		sprite = "graphics/dark-wizard.png";
-		basecolor = {r = 0; g = 169; b = 157; a = 255;};	
 
 		attributes:
 			{
+			type = "ranged";
 			health = 25;
 			damage = 10;
 			range = 4;
