modified:   groups.cfg
Changed knight formation for border testing

--- a/module/base/groups.cfg
+++ b/module/base/groups.cfg
@@ -5,7 +5,8 @@ group:
 		layout = ( 
 			("knight", 0, 0), 
 			("knight", 0, 1), 
-			("knight", 0, 2)
+			("knight", 0, 2),
+			("knight", 1, 1)
 			);
 
 		group_view_offset =
