new file:   BaseRenderArea.cpp 	new file:   BaseRenderArea.h 	modified:   CMakeLists.txt 	new file:   TextArea.cpp 	new file:   TextArea.h
Added New Class: TextArea and BaseRenderArea

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -5,6 +5,8 @@ set(INTERFACE_SRCS
 	ImageButton.cpp
 	TextRectButton.cpp
 	ButtonFactory.cpp
+	BaseRenderArea.cpp
+	TextArea.cpp
 	)
 
 add_library(GF_INTERFACE ${INTERFACE_SRCS})
