modified:   ../core/object/Grid.cpp 	modified:   ../core/object/Grid.h 	new file:   ../interface/Color.cpp 	modified:   ../test/CMakeLists.txt 	new file:   ../test/interface/CMakeLists.txt 	new file:   ../test/interface/Color_Test.cpp 	modified:   CMakeLists.txt 	modified:   Point.h 	modified:   Type.cpp 	modified:   Type.h
Moved Color from Utility to Interface

--- a/utility/CMakeLists.txt
+++ b/utility/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(UTILITY_SRCS
 	Config.cpp Module.cpp
 	ModuleManager.cpp ConfigValidator.cpp
-	Color.cpp Type.cpp
+	Type.cpp
+	Utility.cpp SFMLUtility.cpp
 	)
 
 add_library(GF_UTILITY ${UTILITY_SRCS})
