modified:   CMakeLists.txt 	new file:   FormattedTextArea.cpp 	new file:   FormattedTextArea.h 	new file:   Position.cpp 	new file:   Position.h 	new file:   Style.cpp 	new file:   Style.h
New Class FormattedTextArea

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -7,6 +7,10 @@ set(INTERFACE_SRCS
 	ButtonFactory.cpp
 	BaseRenderArea.cpp
 	TextArea.cpp
+	FormattedTextArea.cpp
+	Style.cpp
+	Color.cpp
+	Position.cpp
 	)
 
 add_library(GF_INTERFACE ${INTERFACE_SRCS})
